# datex2-hungary-map

./: .dockerignore  .gitignore  DATA_NOTES.md  DOCKER_QUICKSTART.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.sh  start.sh
backend/: __init__.py  database.py  main.py  models.py  parser.py
frontend/templates/: map.html
