[project]
name = "hungarian-road-map"
version = "1.0.0"
description = "Interactive Hungarian Road Network Map with DATEX II data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "duckdb>=1.1.0",
    "pandas>=2.2.0",
    "pyproj>=3.6.0",
    "folium>=0.18.0",
    "jinja2>=3.1.0",
    "pydantic>=2.9.0",
    "python-multipart>=0.0.9",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[tool.uv]
dev-dependencies = []

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
